--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,20 @@ name = "otp_exchange"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+# The name of the native library. This is the name which will be used in Python to import the
+# library (i.e. `import string_sum`). If you change this, you must also change the name of the
+# `#[pymodule]` in `src/lib.rs`.
+name = "otp_exchange"
+
+# "cdylib" is necessary to produce a shared library for Python to import from.
+crate-type = ["cdylib"]
+
 [dependencies]
 rand = "0.8.5"
 zip-extensions = "0.8.1"
-pyo3 = { version = "0.22.5", features = ["extension-module"] }
+
+[dependencies.pyo3]
+version = "0.22.5"
+# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
+features = ["abi3-py38"]
