--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,14 @@ build-backend = "maturin"
 [tool.maturin]
 # "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
 features = ["pyo3/extension-module"]
+
+[project]
+name = "otp_exchange"
+version = "2020.0.0"
+requires-python = ">=3.8"
+authors = [
+  {name = "Nicky Nocerino"},
+]
+
+description = "A Rust package for one time pads, with pyo3 bindings"
+readme = "README.md"
