--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ zip-extensions = "0.8.1"
 [dependencies.pyo3]
 version = "0.22.5"
 # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
-features = ["abi3-py38"]
+features = ["abi3-py38", "extension-module"]
