--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 name = "otp_exchange"
 
 # "cdylib" is necessary to produce a shared library for Python to import from.
-crate-type = ["rlib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 rand = "0.8.5"
@@ -19,4 +19,4 @@ zip-extensions = "0.8.1"
 [dependencies.pyo3]
 version = "0.22.5"
 # "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
-#features = ["abi3-py38", "extension-module"]
+features = ["abi3-py38", "extension-module"]
