--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,10 @@ edition = "2021"
 name = "otp_exchange"
 
 # "cdylib" is necessary to produce a shared library for Python to import from.
-crate-type = ["cdylib", "rlib"]
+crate-type = ["rlib"]
 
 [dependencies]
 rand = "0.8.5"
 zip-extensions = "0.8.1"
 
-[dependencies.pyo3]
-version = "0.22.5"
-# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
-features = ["abi3-py38", "extension-module"]
 
-[features]
-extension-module = ["pyo3/extension-module"]
-default = ["extension-module"]
